--- a/style/style.css
+++ b/style/style.css
@@ -97,7 +97,49 @@ text-decoration: none;
     width: 187px;
     margin: 9px;
  }
+ .section1{
+   margin-bottom: 136px;
+   margin-top: 136px;
+   text-align: center;
+ }
 
+.section1_title{
+   font-weight: 700px;
+   font-size: 40px;
+   line-height: 45px;
+ }
+ .commerce_pretitle1{
+   font-weight: 400px;
+   font-size: 26px;
+   Line-height: 22px;
+   margin: 42px 0 16px;
+}
+
+ .commerce{
+   margin-bottom: 136px;
+   text-align: center;
+ }
+
+ .commerce_title{
+   font-size: 40px;
+    Line-height: 45px;
+    font-weight: 700px;
+    margin:136px 0 79px;
+ }
+ .commerce_pretitle{
+   font-weight: 700px;
+   font-size: 19px;
+   Line-height: 23px;
+   margin: 42px 0 16px;
+ }
+
+ .commerce_text{
+   font-size: 15px;
+   line-height: 22px;
+   max-width: 315px;
+ }
+
+ 
  .footer{
     background-color: #20003C;
     padding: 58px 0;
